--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -17,7 +17,7 @@
     "hintFullName": "Nguyen Duc Hoa",
     "hintPhone": "039123456",
     "accountNumber": "Số tài khoản: ",
-    "balance": "Số dư: ",
+    "balance": "Số dư",
     "copied": "Đã sao chép",
     "languages": "Ngôn ngữ",
     "themes": "Giao diện",
