--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -43,5 +43,16 @@
     "emailIsNotValid": "Email is not valid",
     "phoneIsNotValid": "Phone is not valid",
     "passwordAndConfirmPasswordNotSame": "Password and Confirm Password are not the same",
-    "accountAlreadyExists": "Account already exists"
+    "accountAlreadyExists": "Account already exists",
+    "month": "Month",
+    "changePasswordSuccess": "Change password successfully",
+    "oldPassword": "Old password",
+    "newPassword": "New password",
+    "changePasswordFailed": "Change password failed",
+    "wrongOldPassword": "Wrong old password",
+    "theNewPasswordSame": "The new password is the same as the old password",
+    "change": "Change",
+    "transferHistoryIsEmpty": "The transfer history is empty",
+    "confirm": "Confirm",
+    "confirmLogout": "Are you sure you want to"
 }
