--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -55,5 +55,7 @@
     "transferHistoryIsEmpty": "The transfer history is empty",
     "confirm": "Confirm",
     "confirmLogout": "Are you sure you want to",
-    "pleaseEnterAmount": "Please enter the amount as a number"
+    "pleaseEnterAmount": "Please enter the amount as a number",
+    "from": "From",
+    "to": "To"
 }
