--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -57,5 +57,33 @@
     "confirmLogout": "Are you sure you want to",
     "pleaseEnterAmount": "Please enter the amount as a number",
     "from": "From",
-    "to": "To"
+    "to": "To",
+    "thisYourAccount": "This your account number. Please enter other account number",
+    "failed": "Failed",
+    "one": "One",
+    "two": "Two",
+    "three": "Three",
+    "four": "Four",
+    "five": "Five",
+    "six": "Six",
+    "seven": "Seven",
+    "eight": "Eight",
+    "nine": "Nine",
+    "ten": "Ten",
+    "muoi": "Mươi",
+    "oh": "oh",
+    "dozen": "dozen",
+    "unit": "unit",
+    "hundred": "hundred",
+    "thousand": "thousand",
+    "million": "million",
+    "billion": "billion",
+    "twenty": "Twenty",
+    "thirty": "Thirty",
+    "forty": "Forty",
+    "fifty": "Fifty",
+    "sixties": "Sixties",
+    "seventies": "Seventies",
+    "eighty": "Eighty",
+    "ninety": "Ninety"
 }
