--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -57,5 +57,33 @@
     "confirmLogout": "Bạn có chắc bạn muốn",
     "pleaseEnterAmount": "Vui lòng nhập số tiền dưới dạng số",
     "from": "Từ",
-    "to": "Đến"
+    "to": "Đến",
+    "thisYourAccount": "Đây là số tài khoản của bạn. Vui lòng nhập số tài khoản khác",
+    "failed": "Failed",
+    "one": "Một",
+    "two": "Hai",
+    "three": "Ba",
+    "four": "Bốn",
+    "five": "Năm",
+    "six": "Sáu",
+    "seven": "Bảy",
+    "eight": "Tám",
+    "nine": "Chín",
+    "ten": "Mười",
+    "muoi": "Mươi",
+    "oh": "không",
+    "dozen": "chục",
+    "unit": "đơn vị",
+    "hundred": "trăm",
+    "thousand": "nghìn",
+    "million": "triệu",
+    "billion": "tỉ",
+    "twenty": "Twenty",
+    "thirty": "Thirty",
+    "forty": "Forty",
+    "fifty": "Fifty",
+    "sixties": "Sixties",
+    "seventies": "Seventies",
+    "eighty": "Eighty",
+    "ninety": "Ninety"
 }
