--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -54,7 +54,7 @@
     "change": "Đổi",
     "transferHistoryIsEmpty": "Không có lịch sử giao dịch",
     "confirm": "Xác nhận",
-    "confirmLogout": "Bạn có chắc bạn muốn",
+    "confirmAreYou": "Bạn có chắc bạn muốn",
     "pleaseEnterAmount": "Vui lòng nhập số tiền dưới dạng số",
     "from": "Từ",
     "to": "Đến",
@@ -85,5 +85,11 @@
     "sixties": "Sixties",
     "seventies": "Seventies",
     "eighty": "Eighty",
-    "ninety": "Ninety"
+    "ninety": "Ninety",
+    "saveRecipient": "Lưu người nhận",
+    "addContactSuccessfully": "Lưu người nhận thành công",
+    "addContactFailed": "Lưu người nhận thất bại",
+    "successfully": "Thành công",
+    "delete": "Xóa",
+    "deleteContactFailed": "Xóa danh bạ thất bại"
 }
